--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "author": "Aleksey Maksimenko",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.14.9"
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
     "csurf": "^1.11.0",
@@ -24,6 +25,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "mongoose": "^5.13.19",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemailer": "^6.9.3",
     "pdfkit": "^0.8.3",
